# auto-project-template

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  gstack_operations_manual_cn.md  pyproject.toml  start.sh
apps/backend/: main.py
apps/backend/api/: dependencies.py
apps/backend/api/routes/: ops.py  settings.py  tasks.py
apps/backend/core/: config.py  errors.py  logging.py
apps/backend/db/: __init__.py  session.py
apps/backend/models/: __init__.py  ai_profile.py  artifact.py  attempt.py  job.py  mixins.py  result.py
apps/backend/repositories/: ai_profiles.py  tasks.py
apps/backend/schemas/: common.py
apps/backend/services/: health.py  orchestrator.py  provider_registry.py  registration.py  state_machine.py
apps/backend/services/providers/: base.py  mock.py
apps/backend/workers/: job_worker.py
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.json
apps/frontend/src/: App.vue  env.d.ts  style.css
apps/frontend/src/components/: AiProfileDrawer.vue  ServiceStatusBanner.vue  TaskCreateCard.vue  TaskDetailDrawer.vue  TaskListCard.vue  TaskStatusBadge.vue
apps/frontend/src/lib/: api.ts
apps/frontend/src/stores/: useAiProfileStore.ts  useHealthStore.ts  useHubSessionStore.ts  useTaskStore.ts
apps/frontend/src/views/: ServiceDashboardView.vue
apps/service-backend/: Dockerfile  pyproject.toml
apps/service-backend/app/: __init__.py  main.py
apps/service-backend/app/api/: dependencies.py  router.py
apps/service-backend/app/api/routes/: ops.py  service_api.py  settings.py  tasks.py  well_known.py
apps/service-backend/app/core/: config.py  errors.py
apps/service-backend/app/db/: __init__.py  session.py
apps/service-backend/app/models/: __init__.py  ai_profile.py  artifact.py  attempt.py  enums.py  job.py  result.py
apps/service-backend/app/repositories/: ai_profiles.py  tasks.py
apps/service-backend/app/schemas/: auto_onboarding.py  ops.py  service_api.py  settings.py  tasks.py
apps/service-backend/app/services/: health.py  hub_bootstrap.py  hub_telemetry.py  orchestrator.py  provider_registry.py  registration.py  state_machine.py  task_requests.py
apps/service-backend/app/services/providers/: base.py  mock.py
apps/service-backend/app/workers/: job_worker.py  monitor.py
apps/service-backend/tests/: conftest.py  test_auto_onboarding.py  test_hub_telemetry.py  test_tasks.py
apps/service-frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/service-frontend/src/: App.vue  env.d.ts  main.ts
apps/service-frontend/src/api/: http.ts  hubAuth.ts  ops.ts  settings.ts  tasks.ts  types.ts
apps/service-frontend/src/components/: AiProfileDrawer.vue  ServiceStatusBanner.vue  (+4 more)
apps/service-worker/: Dockerfile  pyproject.toml
apps/service-worker/service_worker/: __init__.py  main.py  settings.py
db/migrations/: README.md
docs/: a4_development_plan.md  auto-project-template.code-workspace  auto_template_implementation_manual.md  todo.md
docs/PRD/: service_prd.md
docs/architecture/: service_engineering_plan.md
docs/design/: service_design_guidelines.md
docs/qa/: service_qa_report.md
docs/reviews/: service_review.md
infra/nginx/: Dockerfile  README.md  nginx.conf
infra/nginx/certs/: README.md
infra/nginx/templates/: default.conf.template
rules/.antigravity/: rules.md
scripts/: dev.sh  generate_internal_tls.sh
tests/: conftest.py  test_tasks.py
(+14 files in other folders)
