[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-backend"
version = "0.2.0"
description = "AI Auto child-service backend template"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
