[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-worker"
version = "0.2.0"
description = "AI Auto child-service worker template"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "httpx>=0.28,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["service_worker*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
